--- a/composer.json
+++ b/composer.json
@@ -13,18 +13,12 @@
             "email": "taylor@laravel.com"
         }
     ],
-    "repositories": [
-        {
-            "type": "path",
-            "url": "./../laravel-fortify"
-        }
-    ],
     "require": {
         "php": "^7.3",
         "ext-json": "*",
         "illuminate/support": "^8.0",
         "jenssegers/agent": "^2.6",
-        "laravel/fortify": "*"
+        "laravel/fortify": "^0.0.1"
     },
     "require-dev": {
         "inertiajs/inertia-laravel": "^0.2.4",
